syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.atlas.platform.grpc.protobuf.order";

import "google/protobuf/empty.proto";

package order;

service OrderService {
  rpc ListOrder (ListOrderRequestProto) returns (ListOrderResponseProto) {};
}

message ListOrderRequestProto {
  int32 page = 1;
  int32 size = 2;
}

message OrderProto {
  int32 id = 1;
  int32 user_id = 2;
  repeated OrderItemProto order_item = 3;
  double amount = 4;
  string status = 5;
  string created_at = 6;
  string canceled_reason = 7;
}

message OrderItemProto {
 int32 product_id = 1;
 string product_name = 2;
 double product_price = 3;
 int32 quantity = 4;
}

message ListOrderResponseProto {
  repeated OrderProto records = 1;
  int32 total_count = 2;
}
